Corrected font sizes to make readability easier

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ nav .fa-solid{
 nav ul li a{
     color: #fff;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 24px;
     position: relative;
 }
 
